--- a/cell02/ex00/responsive.css
+++ b/cell02/ex00/responsive.css
@@ -1,16 +1,25 @@
-body {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-.container{
-    display: flex;
+table {
+    width: 100%;
     height: 200px;
-    align-items: center;
-    padding-left: 10px;
     font-family: 'Century Gothic', sans-serif;
 }
+td {
+    padding-left: 10px;
+    vertical-align: middle;
+}
+.leftbox {
+    background-color: lightblue;
+}
+.rightbox {
+    background-color: lightcoral;
+}
 @media (max-width: 600px) {
-    body {
-        grid-template-columns: 1fr;
+    table {
+        width: 100%;
+    }
+    td {
+        display: block;
+        width: 100%;
+        box-sizing: border-box;
     }
 }
