--- a/cell02/ex00/responsive.css
+++ b/cell02/ex00/responsive.css
@@ -1,6 +1,6 @@
 table {
-    width: 100%;
-    height: 200px;
+    width: 100vw;
+    height: 100vh;
     font-family: 'Century Gothic', sans-serif;
 }
 td {
@@ -18,8 +18,10 @@ td {
         width: 100%;
     }
     td {
-        display: block;
+        display: flex;
         width: 100%;
+        height: 100%;
+        align-items: center;
         box-sizing: border-box;
     }
 }
