--- a/cell02/ex03/card.css
+++ b/cell02/ex03/card.css
@@ -1,21 +1,34 @@
+.profile-pic {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+    display: block;
+}
+
+
 .card{
+    padding: 5px;
     width: 250px;
     height: 400px;
     background-color: whitesmoke;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
-}
+    display: flex;
+    justify-content: top;
+    flex-direction: column;
+    align-items: center;
 
-.card, .container{
+}
+.container{
+    padding-top: 50px;
     display: flex;
     justify-content: center;
-    align-items: center;
-}
-
-.container{
     height: 80vh;
     font-family: 'Century Gothic', sans-serif;
 }
-p{
 
+p{
+    font-size: 20px;
 }
