--- a/cell02/ex03/card.css
+++ b/cell02/ex03/card.css
@@ -1,34 +1,76 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
+    
+    text-align: center;
+    font-family: 'Century Gothic', sans-serif;
+}
+
+.title {
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 40px;
+}
+
+.card {
+    width: 250px;
+    height: 400px;
+    padding: 20px;
+    
+    background-color: whitesmoke;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.content {
+    width: 100%;
+    height: 100%;
+    border: none;
+    margin: 0;
+    padding: 0;
+}
+
 .profile-pic {
     width: 150px;
     height: 150px;
     border-radius: 50%;
     object-fit: cover;
-    object-position: center;
-    display: block;
+    margin-bottom: -5px;
 }
 
-
-.card{
-    padding: 5px;
-    width: 250px;
-    height: 400px;
-    background-color: whitesmoke;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-    display: flex;
-    justify-content: top;
-    flex-direction: column;
-    align-items: center;
-
-}
-.container{
-    padding-top: 50px;
+tr {
     display: flex;
     justify-content: center;
-    height: 80vh;
-    font-family: 'Century Gothic', sans-serif;
+    align-items: center;
+    margin: -5px 0;
+    padding: 0;
 }
 
-p{
-    font-size: 20px;
+tr:nth-child(2) {
+    margin-top: 5px;
+}
+
+tr:nth-child(3) {
+    margin-bottom: 5px;
+}
+
+td {
+    padding: 0;
+}
+
+img:not(.profile-pic) {
+    width: 40px;
+    height: 40px;
+}
+
+button {
+    padding: 10px 20px;
+    margin-top: 15px;
 }
